Set css class on sales order status

--- a/modules/public_pages/erp/order/sales_order/resources/css/sales_order.less
+++ b/modules/public_pages/erp/order/sales_order/resources/css/sales_order.less
@@ -67,3 +67,8 @@ select.tax_rate {
 #sorder_customer {
 	width:300px;
 }
+
+#SOrder_status.cancelled {
+	background-color: yellow;
+	border-radius: 5px;
+}
