Tune error reporting and sentry logging. fixes #88 fixes #89 Add error feedback for user Add uzERP logos to default theme

--- a/themes/default/css/screen.less
+++ b/themes/default/css/screen.less
@@ -2027,3 +2027,38 @@
 	
 	
 }
+
+/** Error Page **/
+#flash.sod ul li.logo {
+	margin-left:0;
+	margin-bottom: 3em;
+}
+
+#flash.sod li h1 {
+	margin-bottom: 0.7em;
+	padding-left:0;
+	font-size: 3.5em;
+	color: @orange;
+}
+
+#flash.sod li p {
+	margin: 1.3em 0;
+	font-size: 1.3em;
+	line-height: 1.3em;
+	word-wrap: break-word;
+	padding-right: 20px;
+}
+
+#flash.sod ul#errors {
+	padding: 1.5em 0 2em 0;
+}
+
+#flash.sod a.report {
+	background: none repeat scroll 0 0 @background2;
+    border: 3px solid @orange;
+    color: @orange;
+    font-size: 1.3em;
+    font-weight: bold;
+    margin: 2px;
+    text-shadow: none;
+}
