Add LDAP Authentication option to used with Apache mod_authnz_ldap

--- a/modules/public_pages/login/resources/css/login.less
+++ b/modules/public_pages/login/resources/css/login.less
@@ -85,7 +85,7 @@ body {
     	padding: 3px;
     	width: 170px;
 	}
-	input {
+	input, .button {
 		background-color: white;
 		font-family: Arial, Tahoma, Sans-serif;
 		.border-radius(3px);
@@ -95,7 +95,7 @@ body {
   		border: 1px solid #ccc;
   		margin-right: 7px;
   	}
-  	input[type=submit] {
+  	input[type=submit], .button {
 		width: auto;
   		margin-right: 0;
   		border: 1px solid lightgray;
