When product search is available in the sales order add-line dialog, only trigger search after 3 or more characters are entered. Display a message to the user if less than 3 characters are available.

--- a/themes/default/css/forms.less
+++ b/themes/default/css/forms.less
@@ -309,4 +309,14 @@
 		border: 0;
 	}
 	
+	//FORM ERRORS
+	//-----------
+	
+	label.info {
+	    background-color: #e4e42a;
+		border-radius: 5px;
+		float: left;
+		padding: 1px 5px 0;
+	}
+	
 }
