Make settings labels wider in CSS

--- a/modules/public_pages/erp/order/sales_order/resources/css/sales_order.less
+++ b/modules/public_pages/erp/order/sales_order/resources/css/sales_order.less
@@ -3,6 +3,15 @@
 
 /* add your custom css below */
 
+/* Setup Controller*/
+.placeholder #view_page dt{
+    width: 60%;
+}
+
+.placeholder #view_page dd{
+    width: 36%;
+}
+
 input {
 	&.order_qty {
 		width:60px !important;
