--- a/modules/public_pages/admin/resources/css/admin.css
+++ b/modules/public_pages/admin/resources/css/admin.css
@@ -5,3 +5,19 @@
     margin-top: 1em;
     width: 250px;
 }
+
+.help-text {
+	font-size:13px;
+	line-height:1.24em;
+	margin:1em;
+}
+
+#char-count {
+	font-weight: bold;
+    color: red;
+    float: right;
+}
+
+span#char-count.min-length {
+	color: green;
+}
