Make use of CSS body classes

--- a/modules/public_pages/developer/resources/css/developer.less
+++ b/modules/public_pages/developer/resources/css/developer.less
@@ -91,7 +91,7 @@ html>body #sortable li { height: 1.5em; line-height: 1.2em; }
 }
 
 /* pivot table */
-#pivot_table {
+.controller-datasets #pivot_table {
 	border: 1px dotted lightgray;
 	float: left;
 	width: 100%;
