Disable jQueryUI dialog buttons before ajax call.
Prevents undesirable behaviours when the user double clicks.

--- a/assets/css/lib/jquery-ui/jquery-ui-1.9.custom.less
+++ b/assets/css/lib/jquery-ui/jquery-ui-1.9.custom.less
@@ -481,3 +481,8 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 ----------------------------------*/
 .ui-progressbar { height:2em; text-align: left; }
 .ui-progressbar .ui-progressbar-value {margin: -1px; height:100%; }
+
+.ui-dialog-uzloading {
+    background: url(/assets/graphics/spinner.gif) left 50% no-repeat;
+    padding: 12px 0 12px 20px;
+}
