Fix scrolling of selector targets [again]

--- a/modules/public_pages/erp/order/sales_order/resources/css/sales_order.less
+++ b/modules/public_pages/erp/order/sales_order/resources/css/sales_order.less
@@ -81,3 +81,8 @@ select.tax_rate {
 	background-color: yellow;
 	border-radius: 5px;
 }
+
+/* soproductselectors > select_targets */
+#selected-items-header {
+	display:inline-block; width:100%;
+}
