Introduce click-info UI assets

--- a/assets/css/uzerp/theme.less
+++ b/assets/css/uzerp/theme.less
@@ -5,4 +5,4 @@
 @import "calendar.less";
 @import "../lib/jquery-ui/jquery-ui-1.9.custom.less";
 @import "../lib/formalize/custom_formalize.less";
-
+@import "click-info.less";
