--- a/assets/css/lib/jquery-ui/jquery-ui-1.9.custom.less
+++ b/assets/css/lib/jquery-ui/jquery-ui-1.9.custom.less
@@ -486,3 +486,25 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
     background: url(/assets/graphics/spinner.gif) left 50% no-repeat;
     padding: 12px 0 12px 20px;
 }
+
+/*!
+ * jQuery UI Tooltip 1.9.2
+ * http://jqueryui.com
+ *
+ * Copyright 2012 jQuery Foundation and other contributors
+ * Released under the MIT license.
+ * http://jquery.org/license
+ */
+.ui-tooltip {
+    padding: 8px;
+    position: absolute;
+    z-index: 9999;
+    max-width: 300px;
+    -webkit-box-shadow: 0 0 5px #aaa;
+    box-shadow: 0 0 5px #aaa;
+}
+/* Fades and background-images don't work well together in IE6, drop the image */
+* html .ui-tooltip {
+    background-image: none;
+}
+body .ui-tooltip { border-width: 2px; }
