Add space around form controls

--- a/assets/css/uzerp/forms.less
+++ b/assets/css/uzerp/forms.less
@@ -307,6 +307,12 @@
 		border: 0;
 	}
 	
+	.form-buttons-inline {
+	   input, a {
+	       margin-right: 1em;
+	   }
+	} 
+	
 	//FORM ERRORS
 	//-----------
 	
