--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -694,8 +694,11 @@
 /** eglets styling **/
 
 	.egbox {
-		margin-left: 0;
-		padding-top: 10px;
+		display: grid;
+		grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+		grid-auto-rows: minmax(230px,auto);
+		grid-gap: 2em;
+		grid-auto-flow: dense;
 	}
 	
 	#edit_dashboard_link {
@@ -703,12 +706,12 @@
 		float: right;
 		margin-top: 30px;
 	}
+
+	.uzlet-type-action .heading {
+		background: #ffdf94 !important;
+	}
 	
 	.eglet {
-		float: left;
-		margin: 0 20px 20px 5px;
-		padding: 10px;
-		width: 240px;
 		a {
 			color: @dark-grey;
 			text-decoration: none;
@@ -752,7 +755,7 @@
 	}
 	
 	.double_eglet {
-		width: 527px;
+		grid-column: auto / span 2;
 	}
 	
 	.eglet > h2 > img  {
@@ -2060,3 +2063,10 @@
     margin: 2px;
     text-shadow: none;
 }
+
+/** jQuery UI sortable pointer **/
+
+.ui-sortable li {
+    cursor: move;
+}
+
