--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -2070,3 +2070,14 @@
     cursor: move;
 }
 
+@media only screen 
+  and (max-width: 568px) {
+    
+    .egbox {
+        display: block;
+    }
+
+    .eglet {
+        margin-bottom: 10px;
+    }
+}
