--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -914,6 +914,9 @@
 				text-align: right;
 			}
 		}
+		th.center {
+			text-align: center;
+		}
 		tr {
 			&.sub_total {
 				background-color: #ADD8E6;
