Make the sales summary uzLET double width

--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -812,6 +812,14 @@
 			}
 		}
 	}
+
+	.columns_2 {
+		display: flex;
+		#view_data_left, #view_data_right {
+			flex-basis: 50%;
+			float: none;
+		}
+	}
 	
 	.droppable {
 		background-color: #ffd;
