Allow for horizontal scrolling on uzLET charts

--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -774,6 +774,11 @@
 		.datagrid tbody {
 		    height: hidden !important;
 		}
+
+		.eglet_body {
+			// allow for horizontal scrolling of charts
+			overflow-x: auto;
+		}
 	}
 	
 	.double_eglet {
