Fix holiday calendar interactions and add Bank Holidays
references #122

--- a/assets/css/uzerp/calendar.less
+++ b/assets/css/uzerp/calendar.less
@@ -191,3 +191,15 @@
 	left: 7px; 
 	top: 5px;
 }
+
+.fc-header-title {
+    font-size: 2em;
+}
+
+.fc-event-title {
+    font-size: 1.5em;
+}
+
+.context-menu-item {
+    font-size:0.8em;
+}
