--- a/assets/css/uzerp/calendar.less
+++ b/assets/css/uzerp/calendar.less
@@ -192,12 +192,17 @@
 	top: 5px;
 }
 
-.fc-header-title {
-    font-size: 2em;
+.fc-header-left {
+    display:flex;
+}
+
+.fc-header-title h2 {
+    font-size: 1.3em;
 }
 
 .fc-event-title {
-    font-size: 1.5em;
+    font-size: 1.3em;
+    line-height: 1.3em;
 }
 
 .context-menu-item {
