Allow personal data to be deleted for employee leavers

--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -1,5 +1,5 @@
 /**
- *	(c) 2000-2012 uzERP LLP (support#uzerp.com). All rights reserved.
+ *	(c) 2000-2020 uzERP LLP (support#uzerp.com). All rights reserved.
  *
  *	Released under GPLv3 license; see LICENSE.
  **/
@@ -2065,6 +2065,10 @@
 	}
 	
 	
+}
+
+.dialog-form {
+	display: none;
 }
 
 /** Error Page **/
