--- a/assets/css/uzerp/theme.less
+++ b/assets/css/uzerp/theme.less
@@ -1,6 +1,7 @@
 @import "preboot.less";
 @import "screen.less";
 @import "forms.less";
+@import "formgrid.less";
 @import "print.less";
 @import "calendar.less";
 @import "../lib/jquery-ui/jquery-ui-1.9.custom.less";
