--- a/assets/css/uzerp/formgrid.less
+++ b/assets/css/uzerp/formgrid.less
@@ -32,3 +32,105 @@
 .formgrid-legend {
     margin: 1em 0 2em 0;
 }
+
+/*
+This is here to assist in making forms more responsive and look cleaner.
+*/
+#view_page .viewgrid {
+    display: grid;
+    grid-template-columns: 0.5fr 1em 1fr;
+    grid-gap: 0.3em 0.6em;
+    grid-auto-flow: dense;
+    align-items: center;
+    padding: 10px;
+    /*border: 1px solid #ccc;*/
+    background: #e1e1e1;
+
+
+    dd {
+        grid-column: 2 ~"/" 4;
+        width: auto;
+        margin: 0;
+        padding: 0;
+        border: none;
+        background: none;
+    }
+
+    dd input, dd select {
+        width: 90%;
+    }
+
+    input[type="checkbox"], input[type="radio"] {
+        grid-column: 1 ~"/" 3;
+        justify-self: end;
+        margin: 0;
+        top: unset;
+        vertical-align: middle;
+        width: unset;
+    }
+
+    input[type="submit"] {
+        width: unset;
+    }
+
+    dt, dt label, input[type="checkbox"] + label, input[type="radio"] + label {
+    width: auto;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    border: none;
+    background: none;
+    }
+
+    dt.submit, dd.submit {
+        background: none !important;
+        border: none !important;
+        padding: 15px 0 0 !important;
+    }
+
+    dd.submit {
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: row;
+    }
+
+    textarea + label {
+        align-self: start;
+    }
+
+    a.dialog {
+        display: inline-block;
+        height: 24px;
+        vertical-align: middle;
+    }
+
+    input.slim.datefield {
+        background-position: 130px 50%;
+        width: 150px;
+    }
+}
+
+#view_page dl.viewgrid {
+    width: 100%;
+}
+
+.split-form {
+    display: block;
+    background: #e1e1e1;
+
+    .view_grid {
+        width: unset;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    #view_page .viewgrid {
+        dd input, dd select {
+            max-width: 60%;
+        }
+    }
+
+    .split-form {
+        display: flex;
+    }
+}
