--- a/assets/css/uzerp/preboot.less
+++ b/assets/css/uzerp/preboot.less
@@ -35,6 +35,15 @@
 
 @text-color1: #000000;
 
+:root {
+	--brand-color: @orange;
+	--light-brand-color: #ffa500;
+	--text-default: @dark-grey;
+	--background-1: @background1;
+	--background-2: @background2;
+	--text-color-1: @text-color1;
+}
+
 // MIXINS
 // ------
 
