--- a/assets/css/uzerp/preboot.less
+++ b/assets/css/uzerp/preboot.less
@@ -42,6 +42,7 @@
 	--background-1: @background1;
 	--background-2: @background2;
 	--text-color-1: @text-color1;
+	--border-1: @border1;
 }
 
 // MIXINS
