--- a/assets/css/uzerp/clicky-menu.css
+++ b/assets/css/uzerp/clicky-menu.css
@@ -252,6 +252,8 @@ ul.panel {
     z-index: 999;
   box-shadow: 4px 2px 4px 2px rgba(0, 0, 0, 0.2);
   border: 1px solid var(--border-1);
+  border-top-width: 0;
+  border-radius: 0 0 3px 3px;
   opacity: 0;
   }
 
