--- a/assets/css/uzerp/clicky-menu.css
+++ b/assets/css/uzerp/clicky-menu.css
@@ -254,8 +254,9 @@ svg[hidden] {
 
 ul.panel {
   /*columns: 4;*/
+  margin-left: 0.25em;
   padding: 20px;
-    z-index: 999;
+  z-index: 999;
   box-shadow: 4px 2px 4px 2px rgba(0, 0, 0, 0.2);
   border: 1px solid var(--border-1);
   border-top-width: 0;
