--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -23,7 +23,7 @@
 		body {
 			background-color: @date-picker-background; 
 			color: @date-picker-text;
-			font-family: Helvetica, Arial,Verdana, sans-serif;
+			font-family: Tahoma, Helvetica, Arial,Verdana, sans-serif;
 			font-size: 100%;
 			font-style: normal;
 			font-weight: normal;
