--- a/modules/public_pages/login/resources/css/login.less
+++ b/modules/public_pages/login/resources/css/login.less
@@ -8,8 +8,26 @@ body {
 	color: #fff;
 }
 
+button {
+	cursor: pointer;
+}
+
+form {
+	display: flex;
+}
+
+p {
+	margin: 0;
+}
+
+p.step {
+	text-align: left;
+	margin-bottom: 0.2em;
+	font-weight: bold;
+}
+
 #login {
-	font-size: 12px;
+	font-size: 14px;
 	color: @dark-grey;
 	margin: 100px auto 0;
 	width: 500px;
@@ -45,22 +63,24 @@ body {
 		h2 {
 			font-size: 18px;
 			line-height: 18px;
-			margin: 25px 0 5px;
+			margin: 0;
 			text-align: center;
 			color: white;
 		}
 	}
+
+	h2 {
+		display: flex;
+		justify-content: center;
+		margin-top: 0;
+	}
+
 	.form {
 		padding: 25px;
-		
 	}
 	.footer {
 		padding: 25px;
 		padding-top: 10px;
-	}
-	p {
-		text-align: center;
-		margin: 10px 0;
 	}
 	a {
 		text-decoration: none;
@@ -74,6 +94,7 @@ body {
 	}
 	form {
 		margin: 0;
+		justify-content: center;
 	}
 	label {
 		float: left;
@@ -85,9 +106,9 @@ body {
 		background-color: white;
 		font-family: Arial, Tahoma, Sans-serif;
 		.border-radius(3px);
-		font-size: 18px;
+		font-size: 16px;
 		width: 170px;
-		padding: 2px;
+		padding: 2px 5px;
   		border: 1px solid #ccc;
   		margin-right: 7px;
   	}
@@ -96,8 +117,97 @@ body {
   		margin-right: 0;
   		border: 1px solid lightgray;
 		text-align: center;
+		.submit();
   	}
-}	
+
+	.submit() {
+		background-color: var(--brand-color);
+		border: none;
+		padding: 10px 20px;
+		color: #fff;
+		font-size: 14px;
+		font-weight: bold;
+		letter-spacing: 0.03em;
+		cursor: pointer;
+		&:hover {
+			background-color: fade(@orange, 30%);
+		}
+	}
+
+	.secondary-action {
+		.submit();
+		.border-radius(3px);
+		background-color: #fff;
+		border: 1px solid var(--brand-color);
+		color: var(--brand-color);
+		margin-left: 5px;
+		&:hover {
+			box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.3);
+		}
+	}
+
+	.form.mfaenroll {
+		h2 {
+			margin: 0;
+		}
+
+		p {
+			text-align: left;
+			margin: 0;
+		}
+
+		.card {
+			display: flex;
+			align-items: center;
+			border-bottom: 1px solid #3f3f3f;
+			padding: 15px 0 15px;
+			&:last-child {
+				border: none;
+			}
+
+			p {
+				text-align: left;
+				margin-bottom: 1em;
+				line-height: 1.4em
+			}
+
+			.card-aside {
+				width: 35%;
+				img {
+					width: 100%;
+				}
+			}
+
+			.card-main {
+				margin: 10px;
+				width: 65%;
+			}
+
+			#totp-token {
+				width: 100%;
+				font-family: mono;
+				font-size: 14px;
+			}
+
+
+		}
+	}
+
+	.form.mfavalidate {
+
+
+		p {
+			text-align: left;
+			margin: 0;
+		}
+
+		h2 {
+			justify-content: center;
+		}
+	}
+}
+
+
 
 #errors {
 	margin: 15px 0;
