--- a/modules/public_pages/login/resources/css/login.less
+++ b/modules/public_pages/login/resources/css/login.less
@@ -213,12 +213,13 @@ p.step {
 	margin: 15px 0;
 	font-size: 14px;
 	padding: 0;
+	list-style: none;
 	li {
 		text-align: center;
 		background-color: red;
 		color: white;
 		.border-radius(5px);
 		padding: 5px;
-		margin: 0;
+		margin: 0 0 5px 0;
 	}
 }
