--- a/modules/public_pages/login/resources/css/login.less
+++ b/modules/public_pages/login/resources/css/login.less
@@ -148,6 +148,8 @@ p.step {
 
 	.form.mfaenroll {
 		h2 {
+			display: block;
+			justify-content: unset;
 			margin: 0;
 		}
 
@@ -161,7 +163,7 @@ p.step {
 			align-items: center;
 			border-bottom: 1px solid #3f3f3f;
 			padding: 15px 0 15px;
-			&:last-child {
+			&:nth-of-type(3) {
 				border: none;
 			}
 
@@ -169,6 +171,10 @@ p.step {
 				text-align: left;
 				margin-bottom: 1em;
 				line-height: 1.4em
+			}
+
+			p.step {
+				margin:0;
 			}
 
 			.card-aside {
