--- a/assets/css/uzerp/formgrid.less
+++ b/assets/css/uzerp/formgrid.less
@@ -68,102 +68,158 @@
 
 /*
 This is here to assist in making forms more responsive and look cleaner.
+
+See: modules/public_pages/admin/templates/users/new.tpl for an example.
+Note the additional markup and smarty plugin to produce <h2> for section 
+headers instead od <dt>.
 */
-#view_page .viewgrid {
-    display: grid;
-    grid-template-columns: 0.5fr 1em 1fr;
-    grid-gap: 0.3em 0.6em;
-    grid-auto-flow: dense;
-    align-items: center;
-    padding: 10px;
-    /*border: 1px solid #ccc;*/
-    background: #e1e1e1;
+#view_page {
 
-
-    dd {
-        grid-column: 2 ~"/" 4;
-        width: auto;
-        margin: 0;
-        padding: 0;
-        border: none;
-        background: none;
+    h2.heading {
+        background: #ddd;
+        padding: 10px;
+        font-size: 13px;
+        color: #2e2e2e;
     }
 
-    dd input, dd select {
-        width: 90%;
+    .help {
+        line-height: 1rem;
+        margin: 5px 0 15px 0;
+        font-weight: normal;
+        padding-left: 7px;
     }
 
-    input[type="checkbox"], input[type="radio"] {
-        grid-column: 1 ~"/" 3;
-        justify-self: end;
-        margin: 0;
-        top: unset;
-        vertical-align: middle;
-        width: unset;
+    dd.submit, dt.submit {
+        border: 0 !important;
     }
 
-    input[type="submit"] {
-        width: unset;
-    }
-
-    dt, dt label, input[type="checkbox"] + label, input[type="radio"] + label {
-    width: auto;
-    height: auto;
-    padding: 0;
-    margin: 0;
-    border: none;
-    background: none;
-    }
-
-    dt.submit, dd.submit {
-        background: none !important;
-        border: none !important;
-        padding: 15px 0 0 !important;
-    }
-
-    dd.submit {
-        display: flex;
-        justify-content: flex-end;
-        flex-direction: row;
-    }
-
-    textarea + label {
-        align-self: start;
-    }
-
-    a.dialog {
+    dl.form-actions {
         display: inline-block;
-        height: 24px;
-        vertical-align: middle;
+        margin-top: 10px;
+        border-top: 10px solid #ddd;
+        clear: both;
+        width: 100%;
     }
 
-    input.slim.datefield {
-        background-position: 130px 50%;
-        width: 150px;
-    }
-}
-
-#view_page dl.viewgrid {
-    width: 100%;
-}
-
-.split-form {
-    display: block;
-    background: #e1e1e1;
-
-    .view_grid {
-        width: unset;
-    }
-}
-
-@media screen and (min-width: 800px) {
-    #view_page .viewgrid {
-        dd input, dd select {
-            max-width: 60%;
+    .form-columns {
+        display: block;
+        dl {
+            width: 100%;
         }
     }
 
+    .viewgrid {
+        display: grid;
+        grid-template-columns: 0.5fr 1em 1fr;
+        grid-gap: 0.3em 0.6em;
+        grid-auto-flow: dense;
+        align-items: center;
+        padding: 10px;
+        background: #ffff;
+        font-size: 0.8rem;
+
+        dd {
+            grid-column: 2 ~"/" 4;
+            width: auto;
+            margin: 0;
+            padding: 0;
+            border: none;
+            background: none;
+            line-height: 2rem;
+            font-size: 0.8rem;
+        }
+
+        input, select {
+            font-size: 0.8rem;
+            padding: 3px;
+        }
+
+        input[type="checkbox"], input[type="radio"] {
+            grid-column: 1 ~"/" 3;
+            justify-self: end;
+            margin: 0;
+            top: unset;
+            vertical-align: middle;
+            width: unset;
+        }
+
+        input[type="text"].icon {
+            background-position: right;
+        }
+
+        input[type="submit"] {
+            width: unset;
+        }
+
+        dt, dt label, input[type="checkbox"] + label, input[type="radio"] + label {
+        width: auto;
+        height: auto;
+        padding: 0;
+        margin: 0;
+        border: none;
+        background: none;
+        line-height: 2rem;
+        }
+
+        dt.submit, dd.submit {
+            background: none !important;
+            border: none !important;
+            padding: 15px 0 0 !important;
+        }
+
+        dd.submit {
+            display: flex;
+            justify-content: flex-end;
+            flex-direction: row;
+        }
+
+        textarea + label {
+            align-self: start;
+        }
+
+        a.dialog {
+            display: inline-block;
+            height: 24px;
+            vertical-align: middle;
+        }
+
+        input.slim.datefield {
+            background-position: 130px 50%;
+            width: 150px;
+        }
+    }
+
+    #view_page dl.viewgrid {
+        width: 100%;
+    }
+
     .split-form {
-        display: flex;
+        display: block;
+        background: #e1e1e1;
+
+        .view_grid {
+            width: unset;
+        }
+    }
+
+    @media screen and (min-width: 800px) {
+        #view_page .viewgrid {
+            dd input, dd select {
+                max-width: 60%;
+            }
+        }
+
+        .split-form {
+            display: flex;
+        }
+
+        .form-columns {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            dl {
+                width: 49%;
+            }
+        }
     }
 }
