CSS: Fix footer

--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -834,11 +834,11 @@
 /* footer styling **/
 
 	#footer {
+		width: 100%;
 		color: @dark-grey;
 		clear: both;
 		font-size: 9pt;
-		padding-top: 5px;
-		padding-bottom: 5px;
+		padding-top: 10px;
 		text-align: center;
 		p {
 			margin: 0;
