--- a/assets/css/uzerp/formgrid.less
+++ b/assets/css/uzerp/formgrid.less
@@ -1,7 +1,7 @@
 
 .formgrid {
     display: grid;
-    grid-template-columns: 1fr 1em 2fr;
+    grid-template-columns: 1fr 2fr 1fr 2fr;
     grid-gap: 0.5em 0.6em;
     grid-auto-flow: dense;
     align-items: center;
