--- a/modules/public_pages/login/resources/css/login.less
+++ b/modules/public_pages/login/resources/css/login.less
@@ -64,6 +64,7 @@ p.step {
 			font-size: 18px;
 			line-height: 18px;
 			margin: 0;
+			margin-top: 25px;
 			text-align: center;
 			color: white;
 		}
