CSS: modify colour values to enable CSS variables for themeing
Variables can be set in user/theme.css for specific sites

--- a/assets/css/lib/formalize/custom_formalize.less
+++ b/assets/css/lib/formalize/custom_formalize.less
@@ -80,11 +80,11 @@ textarea {
 input:focus,
 select:focus,
 textarea:focus {
-  -moz-box-shadow: 0 0 1px 1px @orange;
-  -webkit-box-shadow: 0 0 1px 1px @orange;
-  -o-box-shadow: 0 0 1px 1px @orange;
-  box-shadow: 0 0 1px 1px @orange;
-  border: 1px solid @orange !important;
+  -moz-box-shadow: 0 0 1px 1px var(--brand-color);
+  -webkit-box-shadow: 0 0 1px 1px var(--brand-color);
+  -o-box-shadow: 0 0 1px 1px var(--brand-color);
+  box-shadow: 0 0 1px 1px var(--brand-color);
+  border: 1px solid var(--brand-color) !important;
 }
 
 input[type="file"]:focus, input[type="file"]:active,
