--- a/assets/css/uzerp/forms.less
+++ b/assets/css/uzerp/forms.less
@@ -179,11 +179,11 @@
 	
 	a.multiSelect.active, 
 	a.multiSelect.focus {
-		-moz-box-shadow: 0 0 1px 1px #FF4B00;
-		-webkit-box-shadow: 0 0 1px 1px #FF4B00;
-		-o-box-shadow: 0 0 1px 1px #FF4B00;
-		box-shadow: 0 0 1px 1px #FF4B00;
-		border: 1px solid #FF4B00 !important;
+		-moz-box-shadow: 0 0 1px 1px var(--brand-color);
+		-webkit-box-shadow: 0 0 1px 1px var(--brand-color);
+		-o-box-shadow: 0 0 1px 1px var(--brand-color);
+		box-shadow: 0 0 1px 1px var(--brand-color);
+		border: 1px solid var(--brand-color) !important;
 	}
 	
 	.multiSelectOptions {
