--- a/assets/css/uzerp/preboot.less
+++ b/assets/css/uzerp/preboot.less
@@ -38,6 +38,7 @@
 :root {
 	--brand-color: @orange;
 	--light-brand-color: #ffa500;
+	--dark-brand-color: @dark-orange;
 	--text-default: @dark-grey;
 	--background-1: @background1;
 	--background-2: @background2;
