--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -264,8 +264,8 @@
 
 	#title-section a:hover, #title-section a:active, #title-section a:focus {
 		border-bottom-style: solid;
-		color: @dark-orange;
-		border-bottom-color: @dark-orange;
+		color: var(--dark-brand-color);
+		border-bottom-color: var(--dark-brand-color);
 	}
 	
 	#search {
@@ -308,7 +308,7 @@
 		font-weight: normal;
 		overflow: visible;
 		ul {
-			background-color: @main-nav-background;
+			background-color: var(--brand-color);
 			cursor: default;
 			float: left;
 			list-style-type: none;
@@ -476,8 +476,8 @@
 			color: @dark-grey;
 		}
 		a:hover {
-			border-bottom: 1px solid @dark-orange;
-			color: @dark-orange;
+			border-bottom: 1px solid var(--dark-brand-color);
+			color: var(--dark-brand-color);
 		}
 	}
 	
@@ -624,7 +624,7 @@
 			text-decoration: none;
 		}
 		a:hover, a:active, a:focus {
-			color: @dark-orange;
+			color: var(--dark-brand-color);
 		}
 		h3 {
 			color: #2E2E2E;
@@ -880,8 +880,8 @@
 			}
 			a:hover, a:active, a:focus {
 				border-bottom-style: solid;
-				color: @dark-orange;
-				border-bottom-color: @dark-orange;
+				color: var(--dark-brand-color);
+				border-bottom-color: var(--dark-brand-color);
 			}
 			tr {
 				&.sub_total {
@@ -1017,8 +1017,8 @@
 		a:hover, a:active, a:focus {
 			border-bottom-style: solid;
 			text-decoration: none;
-			color: @dark-orange;
-			border-bottom-color: @dark-orange;
+			color: var(--dark-brand-color);
+			border-bottom-color: var(--dark-brand-color);
 		}
 		a.dialog {
 			border: 0;
