UI: make hidden panels expand more smoothly and quickly

--- a/assets/css/uzerp/forms.less
+++ b/assets/css/uzerp/forms.less
@@ -327,6 +327,10 @@
 		float: left;
 		padding: 1px 5px 0;
 	}
+
+	.req-field-indicator {
+		float: none;
+	}
 	
 	//MODULE PREFERENCES
 	//------------------
