--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -1151,6 +1151,7 @@
 	}
 	
 	.expand {
+		cursor: pointer;
 		margin-right: 5px;
 		background-color: @header1 !important;
 		font-size: 13px;
@@ -1180,6 +1181,7 @@
 
 	.hidden {
 		display: none;
+		width: 100%;
 	}
 	
 	#hidden_search {
