--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -162,10 +162,14 @@
 		div.blockMsg {
 		    text-align: center !important;
 		    background-color: #FFF !important;
-		    border: 3px solid #0084B4 !important;
-		    .border-radius("10px !important");
-		    padding: 15px !important;
+		    border: 3px solid var(--brand-color) !important;
+			border-radius: 10px;
+		    padding: 10px !important;
 		    color: #000 !important;
+		}
+
+		div.blockMsg img {
+			height: 17px;
 		}
 		
 		div.blockOverlay {
