feat(echarts): add Apache Echarts JS files
<body>

--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -812,6 +812,11 @@
 			overflow-x: auto;
 		}
 	}
+
+	.eglet_body .chart {
+		display: grid;
+		grid-template-rows: 0.1fr 1fr;
+	}
 	
 	.double_eglet {
 		grid-column: auto / span 2;
