--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -750,7 +750,7 @@
 	.egbox {
 		display: grid;
 		grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
-		grid-auto-rows: minmax(100px,auto);
+		grid-auto-rows: minmax(309px,auto);
 		grid-gap: 2em;
 		grid-auto-flow: dense;
 	}
@@ -810,8 +810,21 @@
 		.eglet_body {
 			// allow for horizontal scrolling of charts
 			overflow-x: auto;
+			animation: fadeIn 0.25s;
 		}
+
+		display: grid;
+		height: 100%;
 	}
+
+	.eglet_body > div > div {
+	animation: fadeIn 0.5s;
+	}
+
+	@keyframes fadeIn {
+		0% { opacity: 0; }
+		100% { opacity: 1; }
+	  }
 
 	.eglet_body .chart {
 		display: grid;
