fix(uzlets): CSS layout fix for Check Sales Price uzLet

--- a/modules/public_pages/erp/order/sales_order/resources/css/sales_order.uzlet.less
+++ b/modules/public_pages/erp/order/sales_order/resources/css/sales_order.uzlet.less
@@ -1,8 +1,18 @@
-/* $Revision: 1.1 $ */
+#sales-price-check-form {
+  display: flex;
+  width: 100%;
+  align-content: space-between;
+}
+
+#sales-price-check-form  dl {
+	width: 50% !important;
+}
 
 #sales_order-soproductlines-sales_price_check ul li {
-	list-style:none;
-	span {
-		float:right;
-	}
+  list-style:none;
 }
+
+#sales_order-soproductlines-sales_price_check #view_data_right li {
+	display: flex;
+	justify-content: space-between;
+  }
