feat(css): adjust font stack, include Inter
<body>

--- a/assets/css/lib/formalize/custom_formalize.less
+++ b/assets/css/lib/formalize/custom_formalize.less
@@ -137,7 +137,7 @@ input[type="week"] {
   outline: 0;
   padding: 2px 3px;
   font-size: 13px;
-  font-family: Arial, "Liberation Sans", FreeSans, sans-serif;
+  font-family: Inter, Tahoma, Helvetica, Arial, Verdana, sans-serif;
   *padding-top: 2px;
   *padding-bottom: 1px;
   *height: auto;
