--- a/assets/css/lib/jquery-ui/jquery-ui-1.9.custom.less
+++ b/assets/css/lib/jquery-ui/jquery-ui-1.9.custom.less
@@ -47,9 +47,9 @@
 
 /* Component containers
 ----------------------------------*/
-.ui-widget { font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif; font-size: 0.8em; }
+.ui-widget { font-family: Inter, Tahoma, Helvetica, Arial, Verdana, sans-serif; }
 .ui-widget .ui-widget { font-size: 1em; }
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif; font-size: inherit; }
+.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Inter, Tahoma, Helvetica, Arial, Verdana, sans-serif; font-size: inherit; }
 .ui-widget-content { border: 1px solid #dddddd; background: #eeeeee url(/assets/css/lib/jquery-ui/images/ui-bg_highlight-soft_100_eeeeee_1x100.png) 50% top repeat-x; color: #333333; }
 .ui-widget-content a { color: #333333; }
 .ui-widget-header { border: 1px solid var(--brand-color); background: var(--brand-color); color: #ffffff; font-weight: bold; }
@@ -433,7 +433,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .ui-datepicker select.ui-datepicker-month-year {width: 100%;}
 .ui-datepicker select.ui-datepicker-month, 
 .ui-datepicker select.ui-datepicker-year { width: 49%;}
-.ui-datepicker table {width: 100%; font-size: 12px; border-collapse: collapse; margin:0 0 .4em; }
+.ui-datepicker table {width: 100%;  border-collapse: collapse; margin:0 0 .4em; }
 .ui-datepicker th { padding: .7em .3em; text-align: center; font-weight: bold; border: 0;  }
 .ui-datepicker td { border: 0; padding: 1px; }
 .ui-datepicker td span, .ui-datepicker td a { display: block; padding: .2em; text-align: right; text-decoration: none; }
