--- a/assets/css/uzerp/forms.less
+++ b/assets/css/uzerp/forms.less
@@ -261,11 +261,11 @@
 		background-image: -ms-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
 		background-image: -o-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
 		background-image: linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
-		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
+		/*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);*/
 		padding: 5px 14px 6px;
 		text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
 		color: #333;
-		font-size: 13px;
+		/*font-size: 13px;*/
 		line-height: normal;
 		border: 1px solid #ccc;
 		border-bottom-color: #bbb;
