fix(css): make sidebar items consistent height/width

--- a/assets/css/uzerp/screen.less
+++ b/assets/css/uzerp/screen.less
@@ -655,6 +655,7 @@
 		a {
 			color: #333;
 			text-decoration: none;
+			line-height: 1.1rem;
 		}
 		a:hover, a:active, a:focus {
 			color: var(--dark-brand-color);
@@ -678,6 +679,7 @@
 				border-bottom: 1px solid @border1;
 				line-height: 1.1rem;
 				list-style-type: none;
+				padding-top: 2px;
 			}
 			li:first-child {
 				border-top: 1px solid @border1;
@@ -733,7 +735,6 @@
 			clear: left;
 			display: block;
 			float: left;
-			width: 130px;
 		}
 		a.new_link {
 			clear: right;
